--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
         <title>Milanesat Countdown</title>
         <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
         <style>
@@ -21,6 +21,7 @@
             body {
                 background: url('zig zag wool.png') repeat fixed;
                 height: 100%;
+                height: 100vh;
                 width: 100%;
                 margin: auto;
             }
