--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 margin: 0.5em 0 0 0;
             }
             div {
+                padding: 1em;
                 position: relative;
                 top: 50%;
                 transform: translateY(-50%);
