--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
         <title>Milanesat Countdown</title>
         <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+        <link href="argentina-milanesa.png" rel="icon" type="image/x-icon" />
         <style>
             @keyframes lighting {
               0% {
