Add patch and link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 width: 100%;
                 margin: auto;
             }
-            h1, p {
+            h1, p, div {
                 font-family: 'VT323', monospace;
                 text-align: center; 
                 color: rgba(200, 200, 200, 0.8);
@@ -56,6 +56,9 @@
             <p>
                 <span id='days'></span>d <span id='hours'></span>:<span id='minutes'></span>:<span id='seconds'></span>
             </p>
+            <a href="http://satellogic.com/">
+                <img src='patch-milanesat_v2.png'/>
+            </a>
         </div>
     </body>
     <script>
