--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
         <title>Ada & Maryam Countdown</title>
-        <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="patch-final.png" rel="icon" type="image/x-icon" />
         <style>
          @keyframes lighting {
@@ -29,7 +29,7 @@
                 margin: auto;
             }
             h1, p, div {
-                font-family: 'VT323', monospace;
+                font-family: 'Roboto', monospace;
                 text-align: center; 
                 color: white;
                 text-shadow: 0px 0px 2px #fafafa;
